fixing horizontal scroll bug

--- a/src/client/styles/components/landing/main.less
+++ b/src/client/styles/components/landing/main.less
@@ -64,3 +64,7 @@ hr {
     width: 100%;
     height: 500px; 
 }
+
+.faqToggle{
+    cursor: pointer;
+}
